--- a/about.html
+++ b/about.html
@@ -165,8 +165,12 @@
             />
             <h3>Andy Downs</h3>
             <h4 class="sub-head">Founder</h4>
-            <a href="https://www.linkedin.com/company/resource-air-charter">
-              <i class="fab fa-linkedin-in"></i>
+            <a
+              href="https://www.linkedin.com/company/resource-air-charter"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-linkedin-in gray"></i>
             </a>
           </div>
           <div class="col-lg-6 portrait text-center my-3">
@@ -177,8 +181,12 @@
             />
             <h3>James Matthews</h3>
             <h4 class="sub-head">Partner</h4>
-            <a href="https://www.linkedin.com/company/resource-air-charter">
-              <i class="fab fa-linkedin-in"></i>
+            <a
+              href="https://www.linkedin.com/company/resource-air-charter"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-linkedin-in gray"></i>
             </a>
           </div>
         </div>
@@ -191,8 +199,12 @@
             />
             <h3>Tom Murphy</h3>
             <h4 class="sub-head">Director of Maintenance</h4>
-            <a href="https://www.linkedin.com/company/resource-air-charter">
-              <i class="fab fa-linkedin-in"></i>
+            <a
+              href="https://www.linkedin.com/company/resource-air-charter"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-linkedin-in gray"></i>
             </a>
           </div>
           <div class="col-lg-6 portrait text-center my-3">
@@ -203,8 +215,12 @@
             />
             <h3>Judd Cowan</h3>
             <h4 class="sub-head">Chief Engineer</h4>
-            <a href="https://www.linkedin.com/company/resource-air-charter">
-              <i class="fab fa-linkedin-in"></i>
+            <a
+              href="https://www.linkedin.com/company/resource-air-charter"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-linkedin-in gray"></i>
             </a>
           </div>
           <div class="col-lg-6 portrait text-center">
@@ -215,8 +231,12 @@
             />
             <h3>Christina England</h3>
             <h4 class="sub-head">Chief of Flight Operations</h4>
-            <a href="https://www.linkedin.com/company/resource-air-charter">
-              <i class="fab fa-linkedin-in"></i>
+            <a
+              href="https://www.linkedin.com/company/resource-air-charter"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-linkedin-in gray"></i>
             </a>
           </div>
         </div>
