--- a/cargo-services.html
+++ b/cargo-services.html
@@ -219,42 +219,60 @@
         <section class="quotes-carousel-container">
           <ul class="quotes-carousel text-center" id="quotes-carousel">
             <li class="quote previous">
-              <i class="far fa-calendar-alt icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/calendar.png"
+                class="carousel-image d-block"
+              />
               <div class="quote-text">
                 Our flight operations is staffed 24/7 because when you have a
                 time-critical mission, you shouldn't have to wait for service.
               </div>
             </li>
             <li class="quote current">
-              <i class="fas fa-globe icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/earth.png"
+                class="carousel-image d-block"
+              />
               <div class="quote-text">
                 Within an hour of your order, our team will be in the air to
                 accomplish your mission objective.
               </div>
             </li>
             <li class="quote next">
-              <i class="far fa-clock icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/time.png"
+                class="carousel-image d-block"
+              />
               <div class="quote-text">
                 Downtime costs manufacturers thousands of dollars per minute.
                 Let us know your protect time to avoid any delays.
               </div>
             </li>
             <li class="quote">
-              <i class="fas fa-procedures icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/patient.png"
+                class="carousel-image d-block"
+              />
               <div class="quote-text">
                 Save lives with rapid air response services for organ transit,
                 patient transport, and pharmaceutical deliveries.
               </div>
             </li>
             <li class="quote">
-              <i class="fas fa-plane icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/airplane.png"
+                class="carousel-image d-block"
+              />
               <div class="quote-text">
                 Protect your flight schedules with active rapid AOG services.
                 Never worry about delivery times again.
               </div>
             </li>
             <li class="quote">
-              <i class="fas fa-medkit icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/intravenous-saline-drip.png"
+                class="carousel-image d-block"
+              />
               <div class="quote-text">
                 Security and high-pressure supply missions performed by
                 experienced aviation pros from planning to delivery.
@@ -304,7 +322,7 @@
               first with the most &mdash; guaranteed.
             </p>
           </div>
-          <div class="col-lg-6 text-center">
+          <div class="col-lg-5 text-center">
             <img
               src="resources/imgs/plane_loading.jpg"
               alt="plane pulling in for loading"
@@ -318,7 +336,7 @@
     <section id="section-shipping" class="py-5">
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <div class="col-lg-6 text-center">
+          <div class="col-lg-5 text-center">
             <img
               src="resources/imgs/loading_cargo.jpg"
               alt="men loading cargo on plane"
@@ -329,8 +347,9 @@
             <h2>Dedicated supply chain solutions</h2>
             <h4>Are you a logistics manager?</h4>
             <p>
-              Ask flight operations about how you can simplify your air
-              transport needs with our door-to-door ground-handling services.
+              Our dedicated flight operations specialist will work with you to
+              guarantee your delivery every step of the way. Ask flight
+              operations about how RAC can simplify your air transport needs.
             </p>
             <div class="pt-2 link-container">
               <a href="/contact" class="btn btn-outline-primary"
@@ -353,7 +372,6 @@
         </div>
         <div class="row text-center py-3">
           <div class="col-md-4">
-            <i class="fas fa-phone icon-step"></i>
             <h5 class="text-muted step">Step 1</h5>
             <p>
               Call our 24/7 flight operations operator to discuss your air
@@ -362,7 +380,6 @@
             </p>
           </div>
           <div class="col-md-4">
-            <i class="fas fa-stopwatch icon-step"></i>
             <h5 class="text-muted step">Step 2</h5>
             <p>
               Our planes will leave within an hour of your order for your point
@@ -370,7 +387,6 @@
             </p>
           </div>
           <div class="col-md-4">
-            <i class="far fa-check-square icon-step"></i>
             <h5 class="text-muted step">Step 3</h5>
             <p>
               Our operators provide you with up-to-date mission communication
