--- a/index.html
+++ b/index.html
@@ -276,7 +276,6 @@
         </div>
         <div class="row text-center py-3">
           <div class="col-md-4">
-            <i class="fas fa-phone icon-step"></i>
             <h5 class="text-muted step">Step 1</h5>
             <p>
               Call our 24/7 flight operations operator to discuss your air
@@ -285,7 +284,6 @@
             </p>
           </div>
           <div class="col-md-4">
-            <i class="fas fa-stopwatch icon-step"></i>
             <h5 class="text-muted step">Step 2</h5>
             <p>
               Our planes will leave within an hour of your order for your point
@@ -293,7 +291,6 @@
             </p>
           </div>
           <div class="col-md-4">
-            <i class="far fa-check-square icon-step"></i>
             <h5 class="text-muted step">Step 3</h5>
             <p>
               Our operators provide you with up-to-date mission communication
@@ -327,7 +324,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-3 mt-3 p-3">
-              <i class="far fa-calendar-alt icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/calendar.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">24/7 Flight Operations</h3>
               <p class="small-p">
                 Our flight operations are staffed 24/7, because when you have a
@@ -335,7 +335,10 @@
               </p>
             </div>
             <div class="col-md-3 mt-3 p-3">
-              <i class="fas fa-globe icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/earth.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Rapid Response Service</h3>
               <p class="small-p">
                 Within an hour, our Rapid Response teams will be in the air to
@@ -343,7 +346,10 @@
               </p>
             </div>
             <div class="col-md-3 mt-3 p-3">
-              <i class="far fa-clock icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/time.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Time-Critical Delivery</h3>
               <p class="small-p">
                 We understand what your time is worth and make sure your cargo
@@ -351,7 +357,10 @@
               </p>
             </div>
             <div class="col-md-3 mt-3 p-3">
-              <i class="fas fa-bullhorn icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/antenna.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Client communication</h3>
               <p class="small-p">
                 From air to ground to door, our team communicates your
