--- a/special-missions.html
+++ b/special-missions.html
@@ -214,7 +214,7 @@
               providing secure transportation almost anywhere in the world.
             </p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-5">
             <img
               src="resources/imgs/puerto_rico.jpg"
               alt="unloading supplies in Puerto Rico"
@@ -243,23 +243,38 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 mt-3 p-4">
-              <i class="fas fa-helicopter icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/airplane-w.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Emergency Evacuation</h3>
             </div>
             <div class="col-md-4 mt-3 p-4">
-              <i class="fas fa-shield-alt icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/shield-w.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Security Escort</h3>
             </div>
             <div class="col-md-4 mt-3 p-4">
-              <i class="fas fa-coins icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/funds-w.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Currency Transport</h3>
             </div>
             <div class="col-md-4 mt-3 p-4">
-              <i class="fas fa-biohazard icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/manufacture-w.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Critical Delivery</h3>
             </div>
             <div class="col-md-4 mt-3 p-4">
-              <i class="fas fa-medkit icon-big d-block"></i>
+              <img
+                src="resources/imgs/icons/box-w.png"
+                class="carousel-image d-block mb-2"
+              />
               <h3 class="sub-head">Disaster Relief</h3>
             </div>
           </div>
